[package]
name = "datafusion-tableproviders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "13"
tokio = { version = "1.21" }

[features]
delta = []

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["delta"]