[package]
name = "datafusion-tableproviders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "13"
tokio = { version = "1.21" }
deltalake = { optional = true, git = "https://github.com/timvw/delta-rs", branch = "datafusion-13", default-features = false, features = ["datafusion-ext", "s3-rustls"] }

[features]
delta = ["deltalake"]
postgres = []

[[example]]
name = "delta"
path = "examples/delta.rs"
required-features = ["delta"]

[[example]]
name = "postgres"
path = "examples/postgres.rs"
required-features = ["postgres"]